# Pysoc

./: .gitignore  README.md  TODO.md  TODO.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py  smp_simulate.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
festivus/: README.md  festivus_submit.py
pysoc/: TODO.txt  img_util.py  utils.py
pysoc/game/: game.py  match.py  player.py  ptsr.py  strategy.py
pysoc/sct/: prefs.py  sct.py  smp.py
