[tool.poetry]
name = "pysoc"
version = "0.1.0"
description = "Social Choice Theory (SCT) library."
authors = ["Jeremy Silver <jeremys@nessiness.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}