[tool.poetry]
name = "pysoc"
version = "0.1.0"
description = "Social Choice Theory (SCT) library."
authors = ["Jeremy Silver <jeremys@nessiness.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1 <=3.10"
numpy = "^1.21.5"
networkx = "^2.6.3"
tqdm = "^4.62.3"
pandas = "^1.3.5"
scipy = "^1.7.3"
Pillow = "^8.4.0"
matplotlib = "^3.5.1"
streamlit = "^1.3.0"
streamlit-aggrid = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}