[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysoc"
dynamic = ["version"]
description = "Social Choice Theory (SCT) library."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Jeremy Silver", email = "jeremys@nessiness.com" }
]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "Pillow",
    "scipy",
    "st-gsheets-connection",
    "streamlit",
    "streamlit-aggrid",
    "tqdm"
]

[tool.hatch.version]
path = "pysoc/__init__.py"